<resources>
    <string name="app_name">calculadora</string>
    <string name="btnAdicionar">+</string>
    <string name="btnSustraer">-</string>
    <string name="btnMultiplicar">x</string>
    <string name="btnDividir">/</string>
    <string name="btnPotencia">^</string>
    <string name="btnPotenciaPorDos">x^2</string>
    <string name="btnLimpiar">CE</string>
    <string name="btnResetear">AC</string>
    <string name="btnUno">1</string>
    <string name="btnDos">2</string>
    <string name="btnTres">3</string>
    <string name="btnCuatro">4</string>
    <string name="btnCinco">5</string>
    <string name="btnSeis">6</string>
    <string name="btnSiete">7</string>
    <string name="btnOcho">8</string>
    <string name="btnNueve">9</string>
    <string name="btnCero">0</string>
    <string name="animTexto">_________esto iba a ser una calculadora,
        pero termino complicandose a la 1:00 am debido a un ataque de creatividad ~(@‿@ )~ __________
        un saludo a la seccion 1 Programacion Android 2019 segundo semestre _________
        cuando dije competencia me referia a competir (ಠ_ಠ)?¿ __________________| 1# ( ò‿óˇ) ha ha |__________________
        ¡DEJEN de FALTAR a clases! (ಥ_ಥ) &lt;/3__________________
        a continuacion Diamantes del maincra: &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt;&lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt;&lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt;_______________________
        do you feel the exclusivity? take moar:  &lt;*&gt; Shiny! &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; _&lt;*&gt;__&lt;*&gt;___&lt;*&gt;_&lt;*&gt;__&lt;*&gt;__&lt;*&gt;___
        so we back in the mine, got our pick axe swinging side to side, day and night _&lt;*&gt;__&lt;*&gt;__&lt;*&gt;__&lt;*&gt;_&lt;*&gt;_&lt;*&gt;__&lt;*&gt;___
        calculadora FOME v1.0.0 AlphaInterestelarHyperUltraSupraNormalFreeSoftware GPLicense 3.0 now and forever! :D_______________________
        free as an slave, so calculadora says \"calculate square(-1) without rules\"_______________________
        please mail me if you are interest in &lt;*&gt; diamonds &lt;*&gt; _______slopez@tuserver.cl______________________________________________
        my github account &lt;*&gt; slopezvvv &lt;*&gt;_______________________
        hope you enjoy this basic calculator on your android_______________________
        so boring, i mean.. seriously? just that? why not animate it more :D_______________________
        moar diamonds! &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; &lt;*&gt; OH YEAH do you feel more rich now?_______________________
        Please wait, looping process is loading again_________________again_________________again_________________
        ____________________________________________________________________________________________&lt;*&gt;_______________________&lt;*&gt;______________________________________________
    </string>
</resources>
