<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".ActivityCalculadora">

    <VideoView
        android:id="@+id/animVideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@drawable/cooltext" />

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorIndigo"
                android:padding="10dp"
                android:text="@string/btnCero"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorIndigo"
                android:ems="10"
                android:padding="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnCero"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCero" />

                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnLimpiar" />

                <Button
                    android:id="@+id/btnResetear"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnResetear"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnUno"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnUno" />

                    <Button
                        android:id="@+id/btnCuatro"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnCuatro" />

                    <Button
                        android:id="@+id/btnSiete"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnSiete" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnDos"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnDos" />

                    <Button
                        android:id="@+id/btnCinco"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnCinco" />

                    <Button
                        android:id="@+id/btnOcho"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnOcho" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnTres"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnTres" />

                    <Button
                        android:id="@+id/btnSeis"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnSeis" />

                    <Button
                        android:id="@+id/btnNueve"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnNueve" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnAdicionar"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnAdicionar" />

                    <Button
                        android:id="@+id/btnSustraer"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnSustraer" />

                    <Button
                        android:id="@+id/btnMultiplicar"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnMultiplicar" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnDividir"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnDividir" />

                    <Button
                        android:id="@+id/btnPotencia"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnPotencia" />

                    <Button
                        android:id="@+id/btnPotenciaPorDos"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnPotenciaPorDos" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/animTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="Sin texto"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>
</FrameLayout>